<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/favourite"
        android:title="@string/action_show_favourites"
        android:icon="@drawable/ic_favourite"
        app:showAsAction="never"/>
    <item android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search"
        app:showAsAction="always|never"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item android:id="@+id/switch_voice"
        android:title="@string/action_switch_voice"
        app:showAsAction="never"/>
    <item android:id="@+id/rate_app"
        android:title="@string/action_rate_app"
        app:showAsAction="never"/>
</menu>
